--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "request": "^2.88.2"
   }
