--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "book",
   "version": "1.0.0",
-  "description": "",
+  "description": "## SQL문 작성  주의사항",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,5 +19,13 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BookMark-Oneline/Server_Nodejs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BookMark-Oneline/Server_Nodejs/issues"
+  },
+  "homepage": "https://github.com/BookMark-Oneline/Server_Nodejs#readme"
 }
