update: 책 등록시 book_id auto_increment

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "method-override": "^3.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "request": "^2.88.2"
   },
   "repository": {
     "type": "git",
