--- a/package.json
+++ b/package.json
@@ -13,15 +13,21 @@
   "dependencies": {
     "@babel/preset-env": "^7.20.2",
     "aws-sdk": "~2.895.0",
+    "bcrypt": "^5.1.0",
+    "connect-mysql2": "^2.2.6",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "multer": "~1.4.2",
     "multer-s3": "^2.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "regex-email": "^1.0.2",
     "request": "^2.88.2"
   },
   "repository": {
