--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aws-sdk": "~2.895.0",
     "bcrypt": "^5.1.0",
     "connect-mysql2": "^2.2.6",
+    "connect-redis": "^6.1.3",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -27,6 +28,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "redis": "^3.1.2",
     "regex-email": "^1.0.2",
     "request": "^2.88.2"
   },
