fix: 코드 병합 및 정리

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "redis": "^3.1.2",
+    "redis-server": "^1.2.2",
     "regex-email": "^1.0.2",
     "request": "^2.88.2"
   },
