--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@babel/preset-env": "^7.20.2",
+    "apple-auth": "^1.0.7",
     "aws-sdk": "^2.1305.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
     "connect-mysql2": "^2.2.6",
     "connect-redis": "^6.1.3",
     "crypto": "^1.0.1",
@@ -21,6 +23,7 @@
     "express": "^4.18.2",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
+    "fs": "^0.0.1-security",
     "init": "^0.1.2",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
@@ -28,6 +31,7 @@
     "multer-s3": "^2.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "passport-apple": "^2.0.2",
     "redis": "^3.1.2",
     "redis-server": "^1.2.2",
     "regex-email": "^1.0.2",
